force-app/main/default/objects/Account/fields/MPAccountEmail__c.field-meta.xml
<CustomField>
    <fullName>MPAccountEmail__c</fullName>
    <label>Email de la cuenta</label>
    <type>Email</type>
</CustomField>