force-app/main/default/objects/Account/fields/MPApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>MPApprovalStatus__c</fullName>
    <label>Estado de Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de Aprobación</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>