force-app/main/default/objects/Account/fields/MPDebtClassification__c.field-meta.xml
<CustomField>
    <fullName>MPDebtClassification__c</fullName>
    <label>Clasificación de deuda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPDebtClassification</valueSetName>
    </valueSet>
</CustomField>