force-app/main/default/objects/Account/fields/MPDICOM__c.field-meta.xml
<CustomField>
    <fullName>MPDICOM__c</fullName>
    <label>DICOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Muy_Bueno</fullName>
                <label>Muy Bueno</label>
            </value>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Malo</fullName>
            </value>
            <value>
                <fullName>Muy_malo</fullName>
                <label>Muy malo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>