force-app/main/default/objects/Account/fields/MPElectronicEntryNumber__c.field-meta.xml
<CustomField>
    <fullName>MPElectronicEntryNumber__c</fullName>
    <label>Número de partida electrónica</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>