force-app/main/default/objects/Account/fields/MPFacilitymanagement__c.field-meta.xml
<CustomField>
    <fullName>MPFacilitymanagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestión de Local</label>
    <referenceTo>MPFacilitymanagement__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>