force-app/main/default/objects/Account/fields/MPFinalGuarantee__c.field-meta.xml
<CustomField>
    <fullName>MPFinalGuarantee__c</fullName>
    <label>Garantía final</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>