force-app/main/default/objects/Account/fields/MPFinalGuaranteeModule__c.field-meta.xml
<CustomField>
    <fullName>MPFinalGuaranteeModule__c</fullName>
    <label>Garantía Final Módulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>