force-app/main/default/objects/Account/fields/MPGuarantor__c.field-meta.xml
<CustomField>
    <fullName>MPGuarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aval</label>
    <type>Checkbox</type>
</CustomField>