force-app/main/default/objects/Account/fields/MPIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>MPIdentificationNumber__c</fullName>
    <label>Número de Identificación</label>
    <length>20</length>
    <type>Text</type>
</CustomField>