force-app/main/default/objects/Account/fields/MPLegalCapacity__c.field-meta.xml
<CustomField>
    <fullName>MPLegalCapacity__c</fullName>
    <label>Personería MP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>