force-app/main/default/objects/Account/fields/MPMonthsWarrantyP101__c.field-meta.xml
<CustomField>
    <fullName>MPMonthsWarrantyP101__c</fullName>
    <label>Meses Garantia P101</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>