force-app/main/default/objects/Account/fields/MPMonthsWarrantyP301__c.field-meta.xml
<CustomField>
    <fullName>MPMonthsWarrantyP301__c</fullName>
    <label>Meses Garantia P301</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>