force-app/main/default/objects/Account/fields/MPOperationType__c.field-meta.xml
<CustomField>
    <fullName>MPOperationType__c</fullName>
    <label>Tipo de Operación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Internacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>