force-app/main/default/objects/Account/fields/MPPeruDepartment__c.field-meta.xml
<CustomField>
    <fullName>MPPeruDepartment__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPPeruDepartment</valueSetName>
    </valueSet>
</CustomField>