force-app/main/default/objects/Account/fields/MPPeruProvince__c.field-meta.xml
<CustomField>
    <fullName>MPPeruProvince__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPPeruProvince</valueSetName>
    </valueSet>
</CustomField>