force-app/main/default/objects/Account/fields/MPRiskClassification__c.field-meta.xml
<CustomField>
    <fullName>MPRiskClassification__c</fullName>
    <label>Clasificación de riesgo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clasificación_A_3_meses</fullName>
                <label>Clasificación A 3 meses</label>
            </value>
            <value>
                <fullName>Clasificación_B__4_meses</fullName>
                <label>Clasificación B  4 meses</label>
            </value>
            <value>
                <fullName>Clasificación_C__5_meses</fullName>
                <label>Clasificación C  5 meses</label>
            </value>
            <value>
                <fullName>Empresas_Nuevas_6_meses</fullName>
                <default>true</default>
                <label>Empresas Nuevas 6 meses</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>