force-app/main/default/objects/Account/fields/MPRUC__c.field-meta.xml
<CustomField>
    <fullName>MPRUC__c</fullName>
    <label>RUC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>