force-app/main/default/objects/Account/fields/MPSector__c.field-meta.xml
<CustomField>
    <fullName>MPSector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPBusinessType__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Rubro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPBusinessType__c</referenceTo>
    <relationshipLabel>Marcas</relationshipLabel>
    <relationshipName>MPSectorAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>