force-app/main/default/objects/Account/fields/MPSunarpOffice__c.field-meta.xml
<CustomField>
    <fullName>MPSunarpOffice__c</fullName>
    <label>Sede Sunarp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>