force-app/main/default/objects/Account/fields/MPTax__c.field-meta.xml
<CustomField>
    <fullName>MPTax__c</fullName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>