force-app/main/default/objects/Account/fields/MPUsabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>MPUsabilityStatus__c</fullName>
    <label>Estado de Usabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPUsabilityStatus</valueSetName>
    </valueSet>
</CustomField>