force-app/main/default/objects/Account/recordTypes/MPAccount.recordType-meta.xml
<RecordType>
    <fullName>MPAccount</fullName>
    <active>true</active>
    <description>Tipo de registro que permite capturar la información del potencial socio comercial interesado en un contrato de arrendamiento.</description>
    <label>Socio Comercial</label>
</RecordType>