force-app/main/default/objects/Account/recordTypes/MPBrand.recordType-meta.xml
<RecordType>
    <fullName>MPBrand</fullName>
    <active>true</active>
    <description>Tipo de registro que permite capturar la información de las marcas que forman parte del portfolio de una cuenta.</description>
    <label>Marca</label>
</RecordType>