force-app/main/default/objects/Account/recordTypes/MPMall.recordType-meta.xml
<RecordType>
    <fullName>MPMall</fullName>
    <active>true</active>
    <description>Tipo de registro que permite capturar la información de los malls.</description>
    <label>Mall</label>
</RecordType>