force-app/main/default/objects/Account/recordTypes/MPSociety.recordType-meta.xml
<RecordType>
    <fullName>MPSociety</fullName>
    <active>true</active>
    <description>Tipo de registro que permite capturar la información de las sociedades propietarias de locales.</description>
    <label>Sociedad</label>
</RecordType>