force-app/main/default/objects/Account/validationRules/VRACC_001_ShippingCountry.validationRule-meta.xml
<ValidationRule>
    <fullName>VRACC_001_ShippingCountry</fullName>
    <active>true</active>
    <description>Impide que el campo ShippingCountry quede vacío.</description>
    <errorConditionFormula>AND(
ISCHANGED( ShippingCountry  ),
ISBLANK(ShippingCountry)
)</errorConditionFormula>
    <errorMessage>Por favor complete el campo País de facturación. (VRACC_001)</errorMessage>
</ValidationRule>