force-app/main/default/objects/Account/validationRules/VRACC_002_SocAndMallEditionBlocked.validationRule-meta.xml
<ValidationRule>
    <fullName>VRACC_002_SocAndMallEditionBlocked</fullName>
    <active>true</active>
    <description>Se bloquea la edición de cuentas de tipo Mall y Sociedad.</description>
    <errorConditionFormula>AND(
NOT(isnew()),
NOT(
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Administrador del sistema&quot;
)
),
OR (
      RecordType.DeveloperName  = &apos;MPSociety&apos; ,
      RecordType.DeveloperName  = &apos;MPMall&apos;
    ) ,
 $UserRole.DeveloperName = &apos;Subgerente_Planificacion_Comercial&apos;   
)</errorConditionFormula>
    <errorMessage>No tiene los permisos necesarios para editar una cuenta de tipo Mall o Sociedad.</errorMessage>
</ValidationRule>