force-app/main/default/objects/Account/listViews/MPAccounts.listView-meta.xml
<ListView>
    <fullName>MPAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>MPApprovalStatus__c</columns>
    <columns>MPRUC__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MPSector__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.MPAccount</value>
    </filters>
    <label>Socios Comerciales</label>
</ListView>