force-app/main/default/objects/Account/listViews/MPBrands.listView-meta.xml
<ListView>
    <fullName>MPBrands</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>MPApprovalStatus__c</columns>
    <columns>MPSector__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.MPBrand</value>
    </filters>
    <label>Marcas</label>
</ListView>